--- a/sass/pages/_works.scss
+++ b/sass/pages/_works.scss
@@ -1,54 +1,42 @@
+@use "../common/helper" as *;
 
-.works__page {
-
+.works-page {
   main {
-    padding-top: 40px;
-    padding-bottom: 60px;
+    padding-top: 4rem;
+    padding-bottom: 6rem;
   }
 
   p {
-    margin-bottom: 62px;
+    text-align: justify;
+    letter-spacing: 0.04em;
+  }
+
+  .works-page__txt {
+    margin-bottom: 6.2rem;
   }
 
   .introduction {
-    margin-bottom: 52px;
+    margin-bottom: 5.2rem;
   }
 
   .works-page__inner {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: $padding_sp;
   }
 
   .wide-img {
-    margin-bottom: 32px;
+    margin-bottom: 1.8rem;
+  }
 
-    :nth-last-of-type(1) {
-      // 画像左右反転
-      transform: scale(-1, 1);
-    }
+  .reversal-img {
+    transform: scale(-1, 1);
   }
 
   .normal-img {
-    margin-bottom: 32px;
+    margin-bottom: 1.8rem;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
 
-  .tall-img__wrapper {
-    display: flex;
-    gap: 7px;
-    margin-bottom: 32px;
+  .grayscale {
+    filter: grayscale(30%);
   }
-
-  .tall-img {
-    width: 175px;
-    height: 270px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-
-  .closing {
-    // padding-top: 20px;
-    margin-bottom: 0px;
-  }
-
 }
-
