--- a/sass/pages/_works.scss
+++ b/sass/pages/_works.scss
@@ -4,11 +4,14 @@
   main {
     padding-top: 4rem;
     padding-bottom: 6rem;
+    max-width: 1200px;
+    margin: 0 auto;
+
   }
 
   p {
     text-align: justify;
-    letter-spacing: 0.04em;
+    letter-spacing: 0.02rem;
   }
 
   .works-page__txt {
@@ -21,10 +24,22 @@
 
   .works-page__inner {
     padding: $padding_sp;
+    @include mq() {
+      padding: 0 12rem;
+    }
   }
 
   .wide-img {
     margin-bottom: 1.8rem;
+    @include mq() {
+      // border: 8px solid #fff;
+      box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 10px rgba(0,0,0,.3);
+      width: 80%;
+      height: 80%;
+      margin: 0 auto;
+      margin-bottom: 2rem;
+    }
   }
 
   .reversal-img {
@@ -38,5 +53,8 @@
 
   .grayscale {
     filter: grayscale(30%);
+  }
+
+  .works-page__pic {
   }
 }
