--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,6 @@ button {
   .sub-page__title .sub-page__title__container {
     width: 1200px;
     margin: 0 auto;
-    padding: 0 120px;
   }
 }
 .sub-page__title h1 {
@@ -1197,14 +1196,18 @@ button {
   opacity: 0;
 }
 
+.about-page main {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 .about-page .greeting {
   padding-top: 6rem;
   padding-bottom: 12rem;
 }
 @media screen and (min-width: 768px) {
   .about-page .greeting {
-    padding-top: 170px;
-    padding-bottom: 100px;
+    padding-top: 17rem;
+    padding-bottom: 4rem;
   }
 }
 .about-page .greeting__inner {
@@ -1226,21 +1229,24 @@ button {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 108px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 2.8rem;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
   }
 }
 .about-page .greeting__txt {
-  margin-bottom: 14px;
+  margin-bottom: 1.4rem;
   text-align: justify;
   margin-bottom: 2.5rem;
 }
 @media screen and (min-width: 768px) {
   .about-page .greeting__txt {
-    width: 518px;
-    line-height: 2.5;
+    line-height: 2;
   }
 }
 .about-page .signature {
