--- a/sass/pages/_recruit.scss
+++ b/sass/pages/_recruit.scss
@@ -1,12 +1,19 @@
 @use '../common/helper' as *;
 
 .recruit-page {
+
+  main {
+    max-width: 800px;
+    max-width: 90rem;
+    margin: 0 auto;
+  }
+
+
   .recruit {
     padding-top: 60px;
     padding-bottom: 32px;
-    @include mq(pc) {
-      padding-top: 170px;
-      padding-bottom: 100px;
+    @include mq() {
+      padding-top: 16rem;
     }
   }
 
@@ -26,6 +33,8 @@
     padding-top: 32px;
     padding-bottom: 100px;
     font-size: 14px;
+    // max-width: 88rem;
+    margin: 0 auto;
   }
 
   .job-description__inner {
@@ -68,14 +77,21 @@
     font-weight: 300;
   }
 
-  .plus-margin {
-    margin-bottom: 15px;
+  .recruit__add-margin-bottom {
+    margin-bottom: 1.5rem;
+    @include mq() {
+      margin-bottom: .6rem;
+      &:nth-of-type(1) {
+        margin-bottom: 0;
+      }
+    }
   }
 
   // *************** qa ***************
   .qa {
     padding-top: 100px;
     padding-bottom: 120px;
+    // max-width: 88rem;
   }
 
   .qa__inner {
