--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -1,4 +1,50 @@
-.contact_inner {
-  padding-left: 30px;
-  padding-right: 30px;
+@use "../common/helper" as *;
+
+.contact-page {
+  .contact_inner {
+    padding: $padding_sp;
+  }
+
+  .contact__intro {
+    padding-top: 3.5rem;
+    padding-bottom: 2rem;
+    text-align: justify;
+  }
+
+  form {
+    padding-top: 2rem;
+    padding-bottom: 5rem;
+  }
+
+  dl {
+    margin-bottom: 2rem;
+  }
+
+  dt {
+    font-weight: 400;
+    span {
+      color: rgb(210, 48, 48);
+      font-weight: 500;
+      padding-left: 1.2rem;
+    }
+  }
+
+  input,
+  textarea {
+    width: 100%;
+    border: solid 1px rgb(179, 179, 184);
+    border-radius: 0.4rem;
+    padding: 1rem;
+    background-color: rgb(237, 239, 240);
+  }
+
+  .form-btn {
+    border: solid 1px rgb(179, 179, 184);
+    border-radius: 0.4rem;
+    background-color: rgb(56, 57, 62);
+    color: white;
+    padding: 1rem;
+    width: 200px;
+    font-weight: 300;
+  }
 }
