--- a/css/main.css
+++ b/css/main.css
@@ -1556,26 +1556,58 @@ button {
 }
 .contact-page .contact_inner {
   padding: 0 3rem;
+  max-width: 800px;
+}
+@media screen and (min-width: 768px) {
+  .contact-page .contact_inner {
+    margin: 0 auto;
+  }
 }
 .contact-page .contact__intro {
   padding-top: 3.5rem;
   padding-bottom: 2rem;
   text-align: justify;
 }
-.contact-page form {
+.contact-page .contact__form {
   padding-top: 2rem;
-  padding-bottom: 5rem;
+  padding-bottom: 12rem;
 }
-.contact-page dl {
+.contact-page .form__list {
   margin-bottom: 2rem;
 }
-.contact-page dt {
+@media screen and (min-width: 768px) {
+  .contact-page .form-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+.contact-page .form__list__label {
   font-weight: 400;
 }
-.contact-page dt span {
+.contact-page .form__list__label span {
   color: rgb(210, 48, 48);
   font-weight: 500;
-  padding-left: 1.2rem;
+  padding-left: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .contact-page .form__list__label {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+}
+.contact-page .form__list__input {
+  margin-bottom: 1.8rem;
+  max-width: 500px;
+}
+@media screen and (min-width: 768px) {
+  .contact-page .form__list__input {
+    margin-bottom: 4rem;
+    -webkit-box-flex: 9;
+        -ms-flex: 9;
+            flex: 9;
+  }
 }
 .contact-page input,
 .contact-page textarea {
@@ -1593,4 +1625,10 @@ button {
   padding: 1rem;
   width: 200px;
   font-weight: 300;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .contact-page .form-btn {
+    margin: 0 auto;
+  }
 }
