--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -3,6 +3,10 @@
 .contact-page {
   .contact_inner {
     padding: $padding_sp;
+    max-width: 800px;
+    @include mq() {
+      margin: 0 auto;
+    }
   }
 
   .contact__intro {
@@ -11,21 +15,51 @@
     text-align: justify;
   }
 
-  form {
+  .contact__form {
     padding-top: 2rem;
-    padding-bottom: 5rem;
+    padding-bottom: 12rem;
+    // max-width: 600px;
+
+    @include mq() {
+      // display: fle;
+    }
   }
 
-  dl {
+  .form__list {
     margin-bottom: 2rem;
   }
 
-  dt {
+  .form-row {
+    @include mq() {
+      display: flex;
+
+      // gap: 8rem;
+    }
+  }
+
+  .form__list__label {
     font-weight: 400;
     span {
       color: rgb(210, 48, 48);
       font-weight: 500;
-      padding-left: 1.2rem;
+      padding-left: 1rem;
+
+    }
+
+    @include mq() {
+      flex: 1;
+    }
+  }
+
+  .form__list__input {
+    margin-bottom: 1.8rem;
+    max-width: 500px;
+
+    // max-width: 800px;
+
+    @include mq() {
+      margin-bottom: 4rem;
+      flex: 9;
     }
   }
 
@@ -36,6 +70,10 @@
     border-radius: 0.4rem;
     padding: 1rem;
     background-color: rgb(237, 239, 240);
+
+    @include mq() {
+      // width: ;
+    }
   }
 
   .form-btn {
@@ -46,5 +84,10 @@
     padding: 1rem;
     width: 200px;
     font-weight: 300;
+    display: block;
+    @include mq() {
+      margin: 0 auto;
+      // margin-top
+    }
   }
 }
