--- a/css/main.css
+++ b/css/main.css
@@ -1632,3 +1632,32 @@ button {
     margin: 0 auto;
   }
 }
+
+.privacy-policy-page main {
+  letter-spacing: 0.03em;
+}
+.privacy-policy-page p {
+  text-align: justify;
+}
+.privacy-policy-page .privacy-policy__inner {
+  padding: 0 3rem;
+}
+.privacy-policy-page .p-p__intro {
+  padding: 3.2rem 0;
+}
+.privacy-policy-page .p-p__wrapper {
+  margin-bottom: 3.2rem;
+}
+.privacy-policy-page .p-p__ol {
+  list-style-type: decimal;
+  margin-left: 20px;
+  padding-left: 20px;
+}
+.privacy-policy-page .p-p__ul {
+  list-style-type: square;
+  margin-left: 20px;
+  padding-left: 20px;
+}
+.privacy-policy-page li {
+  font-weight: 300;
+}
