--- a/css/main.css
+++ b/css/main.css
@@ -1636,17 +1636,30 @@ button {
 .privacy-policy-page main {
   letter-spacing: 0.03em;
 }
+.privacy-policy-page .privacy-policy__inner {
+  padding: 0 3rem;
+  padding-bottom: 12rem;
+  max-width: 800px;
+}
+@media screen and (min-width: 768px) {
+  .privacy-policy-page .privacy-policy__inner {
+    margin: 0 auto;
+  }
+}
 .privacy-policy-page p {
   text-align: justify;
 }
-.privacy-policy-page .privacy-policy__inner {
-  padding: 0 3rem;
-}
 .privacy-policy-page .p-p__intro {
-  padding: 3.2rem 0;
+  padding-top: 4rem;
+  padding-bottom: 3.2rem;
+}
+@media screen and (min-width: 768px) {
+  .privacy-policy-page .p-p__intro {
+    padding-top: 6rem;
+  }
 }
 .privacy-policy-page .p-p__wrapper {
-  margin-bottom: 3.2rem;
+  margin-bottom: 3.6rem;
 }
 .privacy-policy-page .p-p__ol {
   list-style-type: decimal;
