--- a/sass/pages/_privacy-policy.scss
+++ b/sass/pages/_privacy-policy.scss
@@ -6,23 +6,32 @@
     letter-spacing: 0.03em;
   }
 
+  .privacy-policy__inner {
+    padding: $padding_sp;
+    padding-bottom: 12rem;
+    max-width: 800px;
+    @include mq() {
+      margin: 0 auto;
+    }
+  }
+
   p {
     text-align: justify;
   }
 
-  .privacy-policy__inner {
-    padding: $padding_sp;
-  }
-
   .p-p__intro {
-    padding: 3.2rem 0;
+    padding-top: 4rem;
+    padding-bottom: 3.2rem;
+    @include mq() {
+      padding-top: 6rem;
+    }
   }
 
   .p-p__txt {
   }
 
   .p-p__wrapper {
-    margin-bottom: 3.2rem;
+    margin-bottom: 3.6rem;
   }
 
   .p-p__ol {
