--- a/css/main.css
+++ b/css/main.css
@@ -538,6 +538,11 @@ button {
   border-left: solid 5px rgb(119, 119, 118);
 }
 
+.grayscale {
+  -webkit-filter: grayscale(50%);
+          filter: grayscale(50%);
+}
+
 .top {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1550,10 +1555,6 @@ button {
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.works-page .grayscale {
-  -webkit-filter: grayscale(30%);
-          filter: grayscale(30%);
-}
 .contact-page .contact_inner {
   padding: 0 3rem;
   max-width: 800px;
@@ -1568,12 +1569,22 @@ button {
   padding-bottom: 2rem;
   text-align: justify;
 }
+@media screen and (min-width: 768px) {
+  .contact-page .contact__intro {
+    padding-top: 5.6rem;
+  }
+}
 .contact-page .contact__form {
   padding-top: 2rem;
   padding-bottom: 12rem;
 }
 .contact-page .form__list {
-  margin-bottom: 2rem;
+  margin-bottom: 4.2rem;
+}
+@media screen and (min-width: 768px) {
+  .contact-page .form__list {
+    margin-bottom: 2rem;
+  }
 }
 @media screen and (min-width: 768px) {
   .contact-page .form-row {
@@ -1626,11 +1637,7 @@ button {
   width: 200px;
   font-weight: 300;
   display: block;
-}
-@media screen and (min-width: 768px) {
-  .contact-page .form-btn {
-    margin: 0 auto;
-  }
+  margin: 0 auto;
 }
 
 .privacy-policy-page main {
