--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -13,6 +13,9 @@
     padding-top: 3.5rem;
     padding-bottom: 2rem;
     text-align: justify;
+    @include mq() {
+      padding-top: 5.6rem;
+    }
   }
 
   .contact__form {
@@ -26,7 +29,10 @@
   }
 
   .form__list {
-    margin-bottom: 2rem;
+    margin-bottom: 4.2rem;
+    @include mq() {
+      margin-bottom: 2rem;
+    }
   }
 
   .form-row {
@@ -85,9 +91,6 @@
     width: 200px;
     font-weight: 300;
     display: block;
-    @include mq() {
-      margin: 0 auto;
-      // margin-top
-    }
+    margin: 0 auto;
   }
 }
