--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ body img {
 }
 
 button {
-  color: #000;
+  color: #2d2e2f;
 }
 
 .header {
@@ -172,6 +172,11 @@ button {
           align-items: center;
   background-color: rgba(255, 255, 255, 0.94);
 }
+@media screen and (min-width: 768px) {
+  .nav {
+    height: calc(100vh - 90px);
+  }
+}
 
 .nav.open {
   display: -webkit-box;
@@ -201,13 +206,7 @@ button {
 }
 @media screen and (min-width: 768px) {
   .nav__container {
-    position: relative;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    width: calc(100% - 120px);
-    height: calc(100% - 120px);
+    width: calc(100% - 90px);
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -223,7 +222,6 @@ button {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    gap: 120px;
   }
 }
 
@@ -299,7 +297,7 @@ button {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 25px;
+  gap: 2.4rem;
   margin-bottom: 40px;
 }
 
@@ -315,22 +313,14 @@ button {
 }
 @media screen and (min-width: 768px) {
   .nav-item a {
-    font-size: 20px;
+    font-size: 2.8rem;
     padding: 10px;
   }
 }
 
 .nav__close-btn {
-  border-radius: 2rem;
-  border: 0.5px solid;
-  background: rgba(255, 255, 255, 0.6901960784);
-  -webkit-box-shadow: 0 0.5em 0.5em -0.4em #bbbbba;
-          box-shadow: 0 0.5em 0.5em -0.4em #bbbbba;
-  width: 40%;
-  text-align: center;
-  /* padding-top: 8px; */
-  padding: 0.5rem;
-  padding-top: 0.3rem;
+  font-weight: 300;
+  padding: 1.5rem 2rem;
 }
 
 .sub-page__title {
