--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -132,12 +132,10 @@
   font-size: 1.6rem;
   font-weight: 500;
   margin-bottom: 24px;
-  // color: rgb(96, 96, 96);
-  color: #4f4f4f;
 }
 
 .about__description-highlight {
-  color: black;
+  font-weight: 600;
   position: relative;
   z-index: 1;
 
@@ -145,7 +143,7 @@
     content: "";
     width: 100%;
     height: 50%;
-    background: rgb(230 230 0);
+    background: rgb(249, 246, 87);
     position: absolute;
     top: 0.8em;
     left: 0.1em;
@@ -155,53 +153,16 @@
   }
 }
 
-.about__text {
-  margin-bottom: 28px;
+.about__txt {
+  margin-bottom: 2.4rem;
   text-align: justify;
 }
 
-// ↓再利用できそうと思ったけど、ここでしか使ってないから不要
-.button-more {
-  display: inline-block;
-  padding: 0;
-  border: none;
-  background: none;
-  cursor: pointer;
-  // position: relative;
-
-  .button-more__text,
-  .button-more__arrow {
-    color: #282828;
-    font-weight: 300;
-  }
-}
-
-.about__more {
-  margin-bottom: 40px;
+.about__btn {
+  margin-bottom: 4rem;
 
   @include mq(pc) {
     margin-bottom: 0;
-  }
-}
-
-.button-more__link {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 200px; /* ボタンの幅を適宜設定 */
-  padding: 10px;
-  color: #000; /* テキストの色を設定 */
-  position: relative;
-  overflow: hidden;
-
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: #000000; /* ラインの色を設定 */
   }
 }
 
@@ -222,7 +183,9 @@
 // ---------- works ----------
 .works {
   padding-top: 10rem;
-  padding-bottom: 6rem;
+  padding-bottom: 10rem;
+  background-color: rgb(28, 28, 28);
+  color: white;
 
   @include mq() {
     padding-top: 10rem;
@@ -244,10 +207,17 @@
   }
 }
 
-.works__title {
+.works-section__title__up {
+  color: white;
   text-indent: -3px;
+  font-weight: 100;
+}
+
+.works__title {
   margin-bottom: 2rem;
   font-size: 5rem;
+  text-indent: -3px;
+  font-weight: 450;
 
   @include mq(pc) {
     font-size: 9rem;
@@ -287,7 +257,6 @@
     flex: 1;
     line-height: 2;
     display: flex;
-    align-items: center;
     font-family: "shippori Mincho";
     font-size: 24px;
     p {
@@ -353,16 +322,14 @@
 
 
 
-.works__product__title {
-  font-size: 1.3em;
-  font-weight: 300;
-  margin-bottom: 1.6rem;
-}
-
 .works__txt {
   text-align: justify;
-  margin-bottom: 1.5rem;
-  letter-spacing: .05em;
+  margin-bottom: 3.2rem;
+  letter-spacing: 0.05em;
+  max-width: 790px;
+  p {
+    font-weight: 100;
+  }
 
   @include mq() {
     letter-spacing: $letter-spacing-base;
@@ -371,7 +338,11 @@
 
 .works__pic {
   margin-bottom: 2.5rem;
+
+  border: 3px solid #fff;
+  box-shadow: none;
   @include mq() {
+    border: 5px solid #fff;
     margin: 0;
     margin-bottom: 3rem;
   }
@@ -384,19 +355,19 @@
   }
 }
 
-// ---------- recruit-contact ----------
-.recruit-contact {
+// ---------- r-c ----------
+.r-c {
   padding-top: 12rem;
   padding-bottom: 12rem;
+  // color: #ffffff;
+  // background-color: rgb(28, 28, 28);
   @include mq(pc) {
     padding-top: 24rem;
     padding-bottom: 24rem;
-    max-width: $max-width_pc;
-    margin: 0 auto;
   }
 }
 
-.recruit-contact__inner {
+.r-c__inner {
   padding: $padding_sp;
   display: flex;
   flex-direction: column;
@@ -406,11 +377,13 @@
     flex-direction: row;
     padding: $padding_pc;
     gap: 0px;
+    max-width: $max-width_pc;
+    margin: 0 auto;
   }
 }
 
-// ---------- recruit-contact左 ----------
-.recruit-contact__wrapper1 {
+// ---------- r-c左 ----------
+.r-c__wrapper1 {
   @include mq(pc) {
     display: flex;
     flex-direction: column;
@@ -425,7 +398,7 @@
   margin-bottom: 32px;
 }
 
-// recruit-contact共通
+// r-c共通
 .recruit__title,
 .contact__title {
   // border-bottom: 1px solid #000000;
@@ -454,20 +427,15 @@
 }
 
 .recruit__description {
-  // font-weight: 500;
-  margin-bottom: 42px;
-  font-size: 18px;
+  font-size: 1.8rem;
 
   @include mq(pc) {
-    font-size: 18px;
+    margin-bottom: 42px;
   }
 }
 
-.recruit__txt {
-}
-
-// ---------- recruit-contact右側 ----------
-.recruit-contact__wrapper2 {
+// ---------- r-c右側 ----------
+.r-c__wrapper2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -476,8 +444,6 @@
     display: flex;
     width: 49%;
     position: relative;
-
-    
   }
 }
 
@@ -510,20 +476,15 @@
 
 .contact__wrapper {
   text-align: center;
-  margin-bottom: 4.2rem;
+  margin-bottom: 2.4rem;
 
   @include mq() {
-    text-align: center;
     margin: 0 auto;
   }
 }
 
-.contact__route {
-  font-size: 15px;
-  font-weight: 350;
-  line-height: 2.5;
-  // padding-bottom: 6px;
-  // border-bottom: 1px solid #888888;
+.contact__info {
+  font-size: 1.8rem;
 }
 
 .contact__more {
@@ -531,7 +492,6 @@
     margin-top: auto;
   }
 }
-
 // ---------- じわっ ----------
 /* ぼかしから出現 */
 .blur {
