--- a/sass/common/_variables.scss
+++ b/sass/common/_variables.scss
@@ -7,6 +7,7 @@ html {
 
 $font-family-ja: "Noto Sans JP", sans-serif;
 $font-family-en: "Montserrat", sans-serif;
+
 // $section-title__font-family: "Shippori Mincho", serif;
 // $section-title__font-family: "Oswald", sans-serif;
 
@@ -14,6 +15,7 @@ $font-size-base_sp: 1.5rem;
 $font-size-base_pc: 1.6rem;
 $line-height-base: 2;
 $color-base: #333;
+$color-base: rgb(28, 28, 28);
 $weight-base: 300;
 $letter-spacing-base: 0.04em;
 
