--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -46,10 +46,14 @@
   .form__list__label {
     font-weight: 400;
     span {
-      color: rgb(210, 48, 48);
+      font-size: 11px;
+      border-radius: 4px;
+      background: #f65656;
+      color: white;
       font-weight: 500;
-      padding-left: 1rem;
-
+      margin-left: 0.5rem;
+      padding: 0.3rem;
+      color: white;
     }
 
     @include mq() {
@@ -75,21 +79,10 @@
     border: solid 1px rgb(179, 179, 184);
     border-radius: 0.4rem;
     padding: 1rem;
-    background-color: rgb(237, 239, 240);
-
-    @include mq() {
-      // width: ;
-    }
+    background-color: rgb(248 248 248);
   }
 
   .form-btn {
-    border: solid 1px rgb(179, 179, 184);
-    border-radius: 0.4rem;
-    background-color: rgb(56, 57, 62);
-    color: white;
-    padding: 1rem;
-    width: 200px;
-    font-weight: 300;
     display: block;
     margin: 0 auto;
   }
