style: ボタンアクセシビリティを改善

--- a/css/main.css
+++ b/css/main.css
@@ -153,12 +153,14 @@ button {
 }
 
 .btn {
-  padding: 10px 20px;
   font-family: "shippori Mincho";
-  padding: 12.5px 0 10.5px;
   width: 200px;
   text-align: center;
   border-radius: 48px;
+}
+.btn a {
+  display: block;
+  padding: 12.5px 0 10.5px;
 }
 
 .btn-white {
@@ -169,6 +171,11 @@ button {
 .btn-black {
   color: white;
   background-color: rgb(28, 28, 28);
+}
+
+.btn-close {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 /*=============================
