--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -81,8 +81,6 @@
   @include mq(pc) {
     padding: $padding_pc;
     max-width: $max-width_pc;
-    // padding-left: 60px;
-    // padding-right: 60px;
     margin: 0 auto;
   }
 }
@@ -101,6 +99,10 @@
     .about__contents,
     .about__img {
       flex: 1;
+    }
+
+    .about__img {
+      flex: 1.5;
     }
   }
 }
@@ -172,7 +174,6 @@
 
   img {
     max-width: 100%;
-    // height: 100%;
     object-fit: cover;
     @include mq(pc) {
       height: 100%;
