--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -169,11 +169,28 @@ button {
 .btn-white {
   color: rgb(28, 28, 28);
   background-color: white;
+  border: 1px solid white;
+  transition: .3s;
+
+  &:hover {
+    background-color: rgb(28, 28, 28);
+    color: white;
+    box-shadow: 0 0 10px rgba(255, 254, 254, 0.3);
+  }
 }
 
 .btn-black {
   color: white;
   background-color: rgb(28, 28, 28);
+  border: 1px solid rgb(28, 28, 28);
+  transition: .3s;
+
+
+  &:hover {
+    background-color: white;
+    color: rgb(28, 28, 28);
+    box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .btn-close {
