style: ナビゲーションレスポンス時の不要なスタイルを削除

--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -238,18 +238,11 @@ button {
   align-items: center;
   justify-content: center;
 
-  @include mq(pc) {
+  @include mq() {
     width: calc(100% - 90px);
-    // height: calc(100% - 90px);
     align-items: center;
-    justify-content: space-between;
     padding: 60px;
     gap: 30px;
-  }
-
-  @include mq(pc-max) {
-    justify-content: center;
-    // gap: 120px;
   }
 }
 
