--- a/sass/common/_global.scss
+++ b/sass/common/_global.scss
@@ -311,11 +311,28 @@ button {
   cursor: pointer;
   letter-spacing: 0.1em;
   a {
-    color: #060606;
     color: white;
     font-weight: 200;
     font-size: 18px;
     padding: 1rem;
+    position: relative;
+
+    &::after {
+      position: absolute;
+      left: 0;
+      content: '';
+      width: 100%;
+      height: 1px;
+      background: #ffffff;
+      bottom: -1px;               /*アンダーラインがaタグの下端から現れる*/
+      transform: scale(0, 1);     /*アンダーラインの縮尺比率。ホバー前はx方向に0*/
+      transform-origin: left top; /*変形（アンダーラインの伸長）の原点がaタグ（各メニュー）の左端*/
+      transition: transform 0.3s; /*変形の時間*/
+      }
+
+      &:hover::after {
+      transform: scale(1, 1);     /*ホバー後、x軸方向に1（相対値）伸長*/
+      }
 
     @include mq(pc) {
       font-size: 2.8rem;
@@ -478,28 +495,30 @@ button {
 }
 
 .footer__li {
-  // line-height: 3.5;
   a {
     display: inline-block;
-    padding-bottom: 1px;
+    // padding-bottom: 1px;
+    padding: 1rem;
     position: relative;
     font-weight: 300;
     line-height: 1;
 
     &::after {
-      content: "";
-      bottom: 0;
-      display: block;
-      background-color: #000;
-      height: 1px;
-      left: 0;
       position: absolute;
-      transition: 0.4s all;
-      width: 0;
-    }
-    &:hover::after {
+      left: 0;
+      content: '';
       width: 100%;
-    }
+      height: .5px;
+      background: #ffffff;
+      bottom: -1px;               /*アンダーラインがaタグの下端から現れる*/
+      transform: scale(0, 1);     /*アンダーラインの縮尺比率。ホバー前はx方向に0*/
+      transform-origin: left top; /*変形（アンダーラインの伸長）の原点がaタグ（各メニュー）の左端*/
+      transition: transform 0.3s; /*変形の時間*/
+      }
+
+      &:hover::after {
+      transform: scale(1, 1);     /*ホバー後、x軸方向に1（相対値）伸長*/
+      }
 
     @include mq(pc) {
       font-weight: 200;
